# vjoule

./: .gitignore  CMakeLists.txt  README.md  index.html
book/: .gitignore  book.toml  index.html  publish.sh
book/src/: SUMMARY.md
book/v0.2/: book.toml
book/v1.0/: book.toml
book/v1.1/: book.toml
book/v1.2/: book.toml
book/v1.3/: book.toml
common/: CMakeLists.txt
common/src/common/: _.hh
common/src/common/cgroup/: _.hh  cgroup.cc  cgroup.hh  cgroup_list.cc  cgroup_list.hh
common/src/common/concurrency/: _.hh  iopipe.cc  iopipe.hh  mutex.cc  mutex.hh  proc.cc  proc.hh  thread.cc  thread.hh  timer.cc  timer.hh
common/src/common/formula/: _.hh  divider.hh  formula.hh  value.cc  value.hh
common/src/common/net/: _.hh  header.cc  header.hh  packet.cc  packet.hh  ports.hh
common/src/common/net/tcp/: _.hh  addr.cc  addr.hh  listener.cc  listener.hh  stream.cc  stream.hh
common/src/common/perf/: _.hh  rapl_utils.cc  rapl_utils.hh  watch.cc  watch.hh
common/src/common/plugin/: _.hh  factory.cc  factory.hh  plugin.cc  plugin.hh  types.hh
common/src/common/sensor/: _.hh  sensor.cc  sensor.hh
common/src/common/utils/: _.hh  config.cc  config.hh  copyright.hh  cpuutils.cc  cpuutils.hh  env.cc  env.hh  error.cc  error.hh  files.cc  files.hh  functional.hh  log.cc  log.hh  print.cc  print.hh  range.cc  range.hh  tokenizer.cc  tokenizer.hh
cores/divider/: CMakeLists.txt
cores/dumper/: CMakeLists.txt
cores/dumper/src/: dumper.cc  dumper.hh  main.cc  notif.cc  notif.hh
cores/simple/: CMakeLists.txt
cores/simple/src/: main.cc  simple.cc  simple.hh
deb/: configure.sh  control  create-deb.sh  create_deb.sh  postinst  postrm  preinst  prerm
formulas/divider/: CMakeLists.txt
formulas/divider/src/: main.cc
formulas/dumping_formula/: CMakeLists.txt
formulas/dumping_formula/res/: config.toml  vjoule_dumping_formula.service
formulas/dumping_formula/src/: divider.cc  divider.hh  main.cc
formulas/simple_formula/: CMakeLists.txt
formulas/simple_formula/res/: config.toml  vjoule_simple_formula.service
formulas/simple_formula/src/: main.cc
formulas/simple_formula/src/simple_formula/: divider.cc  divider.hh
patch_libpfm/: .gitignore  CMakeLists.txt  build.sh
plugins/nvidia/: CMakeLists.txt  build.sh
plugins/nvidia/src/: main.cc  reader.cc  reader.hh
plugins/rapl/: CMakeLists.txt
plugins/rapl/src/: main.cc  reader.cc  reader.hh  utils.cc  utils.hh
plugins/yocto/: CMakeLists.txt
plugins/yocto/src/: main.cc  reader.cc  reader.hh
plugins/yocto/src/yocto/: yocto_api.h
puller/formula/c++/: CMakeLists.txt
puller/formula/c++/src/: main.cc
pullers/bash/: wait_custom_test.sh
pullers/py/: .gitignore  to_plot.py
pullers/rust/: Cargo.toml
sensor/: CMakeLists.txt
sensor/res/: cgroups  config.toml  vjoule_sensor.service
sensor/src/: main.cc
sensor/src/sensor/: sensor.cc  sensor.hh
sensor/src/sensor/perf/: watch.cc  watch.hh
sensor/src/sensor/plugins/: factory.hh  plugin.cc  plugin.hh
sensors/std_sensor/: CMakeLists.txt
service/: CMakeLists.txt
service/res/: anon_service.service  cgroups  config.toml  vjoule_service.service
service/src/: main.cc
service/src/sensor/: _.hh  sensor.cc  sensor.hh
tests/: CMakeLists.txt
tests/res/: campaign.toml  test1.toml
tests/src/: campaign.cc  campaign.hh  main.cc  test.cc  test.hh
tools/api/c++/: CMakeLists.txt
tools/api/c++/example/: Makefile  main.cc
tools/api/c++/src/: vjoule_api.cc  vjoule_api.hh
tools/api/c++/src/intern/: cgroup.cc  cgroup.hh  files.cc  files.hh  functional.hh  signal.hh
tools/api/rust/vjoule_api/: Cargo.toml  README.md
tools/api/rust/vjoule_api/src/: lib.rs
tools/api/rust/vjoule_api/src/vjoule_api/: constants.rs  diff.rs  error.rs  mod.rs  perc.rs  process_group.rs  stamp.rs  utils.rs
tools/cgutils/: CMakeLists.txt
tools/cgutils/src/: main.cc
tools/vjoule/: CMakeLists.txt
tools/vjoule/res/: _vjoule
tools/vjoule/src/: command.cc  command.hh  exec.cc  exec.hh  exiting.hh  exporter.cc  exporter.hh  main.cc  profiler.cc  profiler.hh  rapl.cc  rapl.hh  top.cc  top.hh  vjoule.cc  vjoule.hh  vjoule_exec.hh  watch.cc  watch.hh  watcher.cc  watcher.hh
v0.2/: custom.js  index.html  print.html
v0.2/api_reference/: index.html
v0.2/formulas/: implementing-new-formula.html  index.html  simple-formula.html  smartwatts-formula.html
v0.2/getting_started/: first_tests.html  index.html  installation.html  what_is_vjoule.html
v0.2/home/: index.html
v0.2/pullers/: index.html
v0.2/sensor/: impl-cgroup-lister.html  impl-notif.html  impl-perf-event.html  impl-sensor.html  impl.html  index.html  protocol.html
v0.2/tutorial/: fetch_results.html  index.html  mesuring.html  mesuring_ws.html
v0.2/user_guide/: cgroups.html  directories_layout.html  dumping_formula.html  index.html  pullers.html
v1.0/: chapter_1.html  custom.css  custom.js  index.html  print.html
v1.0/cli/: exec.html  index.html  profile.html  top.html
v1.0/getting_started/: first_tests.html  index.html  installation.html  what_is_vjoule.html
v1.0/home/: index.html
v1.0/troubleshooting/: index.html
v1.0/tutorial/: index.html  mesuring.html
v1.0/user_guide/: cgroups.html  directories_layout.html  divider_core.html  dumping_core.html  index.html  pullers.html  sensor_plugins.html
v1.2/: custom.css  custom.js  index.html  print.html
v1.2/api/: index.html  py.html  rust.html
v1.2/cli/: exec.html  index.html  profile.html  top.html
v1.2/getting_started/: first_tests.html  index.html  installation.html  what_is_vjoule.html
v1.2/home/: index.html
v1.2/images/: main.tex
v1.2/troubleshooting/: index.html
v1.2/tutorial/: index.html  mesuring.html
v1.2/user_guide/: cgroups.html  directories_layout.html  divider_core.html  dumping_core.html  index.html  pullers.html  sensor_plugins.html
v1.3/: custom.js  index.html  print.html
v1.3/api/: c++.html  index.html  py.html  rust.html
v1.3/cli/: exec.html  index.html  top.html
v1.3/getting_started/: first_tests.html  index.html  installation.html  (+1 more)
yocto_build/: .gitignore  CMakeLists.txt  build.sh
(+235 files in other folders)
