cmake_minimum_required (VERSION 3.1)
project (vjoule)

add_subdirectory (patch_libpfm)
add_subdirectory (yocto_build)
add_subdirectory (common)
add_subdirectory (service)
add_subdirectory (cores/dumper)
add_subdirectory (cores/simple)
add_subdirectory (plugins/rapl)
add_subdirectory (plugins/yocto)
add_subdirectory (plugins/nvidia)
add_subdirectory (tools/vjoule)
